--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"react": "16.0.0-alpha.6",
 		"react-native": "^0.44.3",
 		"react-native-admob": "^1.3.0",
+		"react-native-google-analytics-bridge": "^5.1.0",
 		"react-native-material-design-searchbar": "^1.1.4",
 		"react-native-safari-view": "^2.0.0",
 		"react-native-vector-icons": "^4.2.0"
